Day1/securitygroup-allowssh.tf
resource "aws_security_group" "public_sg" {
  name        = "public_sg"
  description = "Allow SSH from 0.0.0.0/0"
  vpc_id      = aws_vpc.vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }
    tags =  {
    Name = "public_sg_terra1"
  }

}
